<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="15dp"
        tools:visibility="invisible"
        android:layout_centerInParent="true"/>

    <View
        android:id="@+id/overlay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOverlay"
        android:elevation="14dp"
        android:visibility="gone"
        android:clickable="true"
        tools:visibility="invisible"
        android:focusable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/bg_abstract1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/asset_11"
                android:contentDescription="@string/abstract1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logo_app_min"
                android:layout_width="94dp"
                android:layout_height="94dp"
                android:layout_marginTop="68dp"
                android:contentDescription="@string/logo_simpeg"
                android:src="@drawable/asset_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:fontFamily="@font/gilroy_extrabold"
                android:text="@string/HeadlineLogin"
                android:textColor="@color/textColorPrimary"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@+id/logo_app_min"
                app:layout_constraintTop_toBottomOf="@+id/logo_app_min" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:text="@string/CaptionLogin"
                android:textColor="@color/textColorCaption2"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.ims.helpdesk_mobile.ui.customView.CustomEditText
                android:id="@+id/ed_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="52dp"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="18dp"
                android:textColor="@color/textColorCaption"
                android:textColorHint="@color/textColorField"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.ims.helpdesk_mobile.ui.customView.CustomEditText
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="16dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingHorizontal="18dp"
                android:textColor="@color/textColorCaption"
                android:textColorHint="@color/textColorField"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

            <TextView
                android:id="@+id/txt_registernow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/textColorCaption2"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/lupa_kata_sandi"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password"/>

            <com.ims.helpdesk_mobile.ui.customView.CustomButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="62dp"
                android:background="@drawable/style_button"
                android:fontFamily="@font/nunito_sans_bold"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
                app:layout_constraintStart_toStartOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>