<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    app:layoutDescription="@xml/activity_splash_screen_scene"
    tools:context=".ui.splash.SplashScreen">
    
    <ImageView
        android:id="@+id/abstract1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/abstract1"
        android:scaleType="centerCrop"
        android:src="@drawable/asset_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:contentDescription="@string/logo_simpeg"
        android:src="@drawable/asset_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />
    
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginTop="-43dp"
        android:contentDescription="@string/title_logo"
        android:src="@drawable/asset_3"
        app:layout_constraintEnd_toEndOf="@+id/logo_app"
        app:layout_constraintStart_toStartOf="@+id/logo_app"
        app:layout_constraintTop_toBottomOf="@+id/logo_app" />
    
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="192dp"
        android:layout_height="18dp"
        android:contentDescription="@string/title_logo"
        android:src="@drawable/asset_4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.motion.widget.MotionLayout>