<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".ui.home.MainActivity">
    
    <ImageView
        android:id="@+id/bg_abstract1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/abstract1"
        android:scaleType="fitXY"
        android:src="@drawable/asset_6" />
    
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/custom_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="10dp"
            app:elevation="0dp">
            
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                app:menu="@menu/topappbar_nav_menu"
                app:title="Beranda"
                app:titleTextColor="@color/textColorPrimary">
            
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_appbar">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/selamat_datang_di_simpeg"
                android:textColor="@color/textColorPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/asset_7"
                app:layout_constraintEnd_toEndOf="@+id/text1"
                app:layout_constraintStart_toStartOf="@+id/text1"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                tools:ignore="ContentDescription" />
            
            <TextView
                android:id="@+id/username_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_extra_bold"
                android:text="@string/name_account"
                android:textColor="@color/textColorPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
                app:layout_constraintStart_toStartOf="@+id/iv_avatar"
                app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
            
            <LinearLayout
                android:id="@+id/layout_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/username_account"
                app:layout_constraintStart_toStartOf="@+id/username_account"
                app:layout_constraintTop_toBottomOf="@+id/username_account">
                
                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/nip_account"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp" />
                
                <TextView
                    android:id="@+id/txt_registernow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="2dp"
                    android:text="@string/nip_data_account"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
            
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/text3"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_text2" />
    
            <GridLayout
                android:id="@+id/layout_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text3">
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_dashboard"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_dashboard1" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_1"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_sapk"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_sapk" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_2"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_ekinerja"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_ekinerja" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_3"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_dms"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_dms" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_4"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_jabatan"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_jabatan" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_5"
                            android:textAlignment="center"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        
                <androidx.cardview.widget.CardView
                    android:id="@+id/menu_simpeg_faq"
                    android:layout_width="95dp"
                    android:layout_height="125dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="16dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
            
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_card_gradient"
                        android:gravity="center"
                        android:orientation="vertical">
                
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="15dp"
                            android:contentDescription="@string/logo_menu"
                            android:src="@drawable/ic_faq" />
                
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/menu_6"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
            <ImageView
                android:layout_width="82dp"
                android:layout_height="17dp"
                android:src="@drawable/asset_8"
                android:layout_marginTop="95dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/logo_simpeg"
                app:layout_constraintTop_toBottomOf="@+id/layout_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>